--- a/src/teaeli/OrderDetails.form
+++ b/src/teaeli/OrderDetails.form
@@ -155,8 +155,11 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="blendTable">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="1"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="4">
+              <Table columnCount="3" rowCount="1">
                 <Column editable="true" title="Blend Code" type="java.lang.Object"/>
                 <Column editable="true" title="Blend Name" type="java.lang.Object"/>
                 <Column editable="true" title="Quantity" type="java.lang.Object"/>
