--- a/src/teaeli/AddNewBlends.form
+++ b/src/teaeli/AddNewBlends.form
@@ -155,6 +155,7 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBoxProduct">
           <Properties>
+            <Property name="editable" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
                 <StringItem index="0" value="Item 1"/>
